--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Hackathon Project</title>
-</head>
-<body>
-        <h1>Hello world!</h1>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+    <h1>Hello world!</h1>
+{% endblock %}
