--- a/flask_app/templates/base.html
+++ b/flask_app/templates/base.html
@@ -6,7 +6,8 @@
 </head>
 <body>
   <div>Hackathon Project:
-    <a href="/index">Home</a>
+      <a href="/">Home</a>
+      <a href="/login">Login</a>
   </div>
   <hr>
   {% with messages = get_flashed_messages() %}
