Form structures/database

--- a/flask_app/templates/base.html
+++ b/flask_app/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href=""
     <meta charset="UTF-8">
     <title>Hackathon Project</title>
 </head>
@@ -9,8 +10,13 @@
       <a href="{{ url_for('index') }}">Home</a>
       {% if current_user.is_anonymous %}
       <a href="{{ url_for('login') }}">Login</a>
+      <a href="{{ url_for('register') }}">Sign Up</a>
       {% else %}
       <a href="{{ url_for('logout') }}">Logout</a>
+      {% endif %}
+      <a href="{{ url_for('forms') }}">Forms</a>
+      {% if not current_user.is_anonymous %}
+      <a href="{{ url_for('stats') }}">Stats</a>
       {% endif %}
   </div>
   <hr>
