--- a/flask_app/templates/diversity_feedback.html
+++ b/flask_app/templates/diversity_feedback.html
@@ -2,7 +2,7 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>Physical Health Report</h1>
+    <h1>Diversity Feedback</h1>
     <p>- Physical health concerns?</p>
     <div class="row">
         <div class="col-md-4">
