--- a/flask_app/templates/stats.html
+++ b/flask_app/templates/stats.html
@@ -2,31 +2,30 @@
 
 {% block content %}
 <div class="container">
-    <h1>Forms!</h1>
+    <h1>Post inbox!</h1>
 <div class="button-table">
     <div class="input-row">
      <div class="input-group">
-        <a class="button" href="physical">Physical Concern</a>
+        <a class="button" href="physicalposts">Physical Concern Posts</a>
       </div>
         <div class="input-group">
-          <a class="button" href="diversity">Diversity Suggestion</a>
+          <a class="button" href="diversityposts">Diversity Suggestion Posts</a>
         </div>
       </div>
     <div class="input-row">
      <div class="input-group">
-         <a class="button" href="mental">Mental Concern</a>
-
+        <a class="button" href="mentalposts">Mental Concern Posts</a>
       </div>
         <div class="input-group">
-          <a class="button" href="resourceform">Resource Submission</a>
+          <a class="button" href="resourceposts">Resource Submission Posts</a>
         </div>
       </div>
     <div class="input-row">
      <div class="input-group">
-         <a class="button" href="hazard">Hazard Report</a>
+         <a class="button" href="hazardposts">Hazard Report Posts</a>
       </div>
         <div class="input-group">
-          <a class="button" href="misc">Misc Form</a>
+          <a class="button" href="miscposts">Misc Form Posts</a>
         </div>
       </div>
 
@@ -39,7 +38,7 @@
         text-align: center;
         text-decoration: none;
         color: #ffffff;
-        background-color: #7aa8b7;
+        background-color: #FF5683;
         border-radius: 6px;
         outline: none;
         width: 250px;
