--- a/flask_app/templates/diversity_posts.html
+++ b/flask_app/templates/diversity_posts.html
@@ -2,6 +2,11 @@
 
 {% block content %}
     <h1>Diversity Suggestions</h1>
+<style>
+    h1 {
+        text-align: center;
+    }
+</style>
     <hr>
     {% for post in posts %}
         {% include '_post.html' %}
