--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -2,7 +2,12 @@
 
 {% block content %}
     <h1>Hello world!</h1>
-    <h3>Hi, {{ current_user.username }}!</h3>
+<style>
+    h1, h3 {
+        text-align: center;
+    }
+</style>
+<h3> a </h3>
     {% for post in posts %}
     <div><p>{{ post.author.username }} says: <b>{{ post.body }}</b></p></div>
     {% endfor %}
