--- a/flask_app/templates/resource_posts.html
+++ b/flask_app/templates/resource_posts.html
@@ -1,9 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Resource Submissions</h1>
+    <h1>Safety Resources</h1>
+<style>
+    h1 {
+        text-align: center;
+    }
+</style>
     <hr>
     {% for post in posts %}
-        {% include '_post.html' %}
+        {% include '_resourcepost.html' %}
     {% endfor %}
 {% endblock %}
