--- a/flask_app/templates/_post.html
+++ b/flask_app/templates/_post.html
@@ -4,7 +4,8 @@
              <td>
                 <b>Name:</b> {{ post.name }}<br>
                <b>Contact:</b> {{ post.contact }}
-                <br>
+                <br><br>
+                 <b>Message body:</b><br>
                 {{ post.body }}
                 <br><br>
                 <b>Timestamp:</b> {{ post.timestamp.strftime("%m/%d/%Y, %H:%M:%S") }} UTC
