--- a/flask_app/templates/_resourcepost.html
+++ b/flask_app/templates/_resourcepost.html
@@ -2,7 +2,7 @@
         <tr>
             </td>
              <td>
-                 <b>URL:</b> <a href="{{ post.url }}">https://www.apa.org/topics/stress/tips</a><br>
+                 <b>URL:</b> <a href="{{ post.url }}">{{ post.url }}</a><br>
                <b>Description:</b> {{ post.desc }}
                 <br>
                 {{ post.body }}
