--- a/flask_app/templates/health_resource.html
+++ b/flask_app/templates/health_resource.html
@@ -3,7 +3,7 @@
 
 {% block app_content %}
     <h1>Health Resource Contribution</h1>
-    <p>- Physical health concerns?</p>
+    <h3>If you’d like to contribute a resource for our <a href="resources">Resources Page</a></h3>
     <div class="row">
         <div class="col-md-4">
             {{ wtf.quick_form(form) }}
