--- a/flask_app/templates/base.html
+++ b/flask_app/templates/base.html
@@ -21,7 +21,7 @@
                     <li><a href="{{ url_for('forms') }}">Forms</a></li>
                     <li><a href="{{ url_for('resources') }}">Resources</a></li>
                     {% if not current_user.is_anonymous %}
-                    <li><a href="{{ url_for('stats') }}">Stats</a></li>
+                    <li><a href="{{ url_for('stats') }}">Post Inbox</a></li>
                     {% endif %}
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
