--- a/flask_app/templates/diversity_feedback.html
+++ b/flask_app/templates/diversity_feedback.html
@@ -3,7 +3,7 @@
 
 {% block app_content %}
     <h1>Diversity Feedback</h1>
-    <p>- Physical health concerns?</p>
+    <h3>If you’d like to recognize a suggestion for promoting greater diversity and inclusion</h3>
     <div class="row">
         <div class="col-md-4">
             {{ wtf.quick_form(form) }}
