--- a/flask_app/templates/hazard_report.html
+++ b/flask_app/templates/hazard_report.html
@@ -3,7 +3,7 @@
 
 {% block app_content %}
     <h1>Hazard Report</h1>
-    <p>- Physical health concerns?</p>
+    <h3>If you’d like to report a potential hazard</h3>
     <div class="row">
         <div class="col-md-4">
             {{ wtf.quick_form(form) }}
