--- a/flask_app/templates/mental_health_form.html
+++ b/flask_app/templates/mental_health_form.html
@@ -3,7 +3,7 @@
 
 {% block app_content %}
     <h1>Mental Health Report</h1>
-    <p>- Physical health concerns?</p>
+    <h3>If you faced harm to your mental health, have mental health concerns, or need accommodations</h3>
     <div class="row">
         <div class="col-md-4">
             {{ wtf.quick_form(form) }}
