--- a/flask_app/templates/misc_request.html
+++ b/flask_app/templates/misc_request.html
@@ -3,7 +3,7 @@
 
 {% block app_content %}
     <h1>Misc request/comments/concerns!</h1>
-    <p>- Physical health concerns?</p>
+    <h3>If you’d like to let us know of anything else</h3>
     <div class="row">
         <div class="col-md-4">
             {{ wtf.quick_form(form) }}
