--- a/flask_app/templates/phys_health_form.html
+++ b/flask_app/templates/phys_health_form.html
@@ -3,7 +3,7 @@
 
 {% block app_content %}
     <h1>Physical Health Report</h1>
-    <p>- Physical health concerns?</p>
+    <h3>If you faced an incident that posed potential physical harm, or have physical health concerns</h3>
     <div class="row">
         <div class="col-md-4">
             {{ wtf.quick_form(form) }}
